--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,4 +1,5 @@
 @import "reset.css";
 
-@import "components/list";
+@import "components/notifications";
 @import "components/form";
+@import "components/list";
